--- a/html/layout.html
+++ b/html/layout.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8"/>
         <title>{{.Title}}</title>
         <link rel="stylesheet" type="text/css" href="/static/style.css">
+        <script src="https://unpkg.com/htmx.org@1.7.0" integrity="sha384-EzBXYPt0/T6gxNp0nuPtLkmRpmDBbjg6WmCUZRLXBBwYYmwAUxzlSGej0ARHX0Bo" crossorigin="anonymous" defer></script>
+
     </head>
 
     <body>
